examples/test/testpolicy16924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16924
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key12: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value48
      podSelector:
        matchLabels:
          key45: value14
          key44: value5
          key41: value35
